--- a/client/public/locales/fr/translation.json
+++ b/client/public/locales/fr/translation.json
@@ -54,6 +54,32 @@
         "language": {
             "title": "Langue",
             "description": "Choisissez votre langue préférée"
+        },
+        "account": {
+            "title": "Compte",
+            "password": {
+                "current": "Mot de passe actuel",
+                "new": "Nouveau mot de passe",
+                "confirm": "Confirmer le nouveau mot de passe",
+                "change": "Changer le mot de passe",
+                "success": "Mot de passe mis à jour",
+                "description": "Votre mot de passe a été mis à jour avec succès.",
+                "minimumLength": "Le mot de passe doit comporter au moins 8 caractères",
+                "required": "Mot de passe actuel requis",
+                "mismatch": "Les mots de passe ne correspondent pas",
+                "requirements": "Le mot de passe doit inclure des majuscules, des minuscules et des chiffres"
+            },
+            "avatar": {
+                "title": "Image de profil",
+                "description": "Téléchargez une image de profil pour personnaliser votre compte.",
+                "dropzone": "Déposez votre image ici, ou",
+                "browse": "parcourir",
+                "save": "Enregistrer les modifications",
+                "cancel": "Annuler",
+                "uploading": "Téléchargement...",
+                "success": "Avatar mis à jour",
+                "success_description": "Votre image de profil a été mise à jour avec succès."
+            }
         }
     }
 }
