dashboard mockup for further implementation -drag and drop x -columns & tasks

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -81,5 +81,14 @@
                 "success_description": "Your profile picture has been updated successfully."
             }
         }
+    },
+    "dashboard": {
+        "description": "Manage and track your project tasks",
+        "addTask": "Add Task",
+        "kanban": {
+            "todo": "To Do",
+            "inProgress": "In Progress",
+            "done": "Done"
+        }
     }
 }
