feat: update Radix UI components and translations
- Replace `@radix-ui/react-separator` with `@radix-ui/react-scroll-area` in package.json and package-lock.json.
- Update `@radix-ui/react-separator` version to 1.1.7.
- Add new translations for "favourites", "teams", "projects", and "workflows" in English and French.
- Modify sidebar items to include new sections for "favourites", "teams", "projects", and "workflows".
- Update the App component to use `ScrollArea` and include `RecentProject` and `HistoryTabs`.
- Enhance the AppSidebar with new icons and sidebar items.
- Refactor Header component for better spacing.
- Revamp Dashboard layout with `ScrollArea` for improved task management.
- Implement `ScrollArea` in Settings page for better UI.
- Create `HistoryTabs` component to display user activity history.
- Create `RecentProject` component to showcase recently accessed projects.
- Implement a custom `ScrollArea` component for consistent scrolling behavior across the application.

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -2,11 +2,15 @@
     "app": {
         "title": "Jirafy",
         "sidebar": {
-            "home": "Home",
+            "home": "For you",
             "dashboard": "Dashboard",
             "calendar": "Calendar",
             "statistics": "Statistics",
-            "settings": "Settings"
+            "settings": "Settings",
+            "favourites": "Starred",
+            "teams": "Teams",
+            "projects": "Projects",
+            "workflows": "Workflows"
         },
         "search": {
             "placeholder": "Search..."
@@ -16,6 +20,10 @@
             "changeTheme": "Change color theme",
             "toggleTheme": "Toggle theme",
             "create": "Add a task"
+        },
+        "common": {
+            "createdBy": "Created by",
+            "by": "by"
         }
     },
     "settings": {
@@ -89,6 +97,21 @@
             "todo": "To Do",
             "inProgress": "In Progress",
             "done": "Done"
+        }
+    },
+    "home": {
+        "description": "Your personal workspace",
+        "recentProjects": {
+            "title": "Recent Projects",
+            "viewAll": "View all projects",
+            "noProjects": "No recent projects found",
+            "createProject": "Create a new project",
+            "open": "Open project"
+        },
+        "history": {
+            "workedOn": "Worked on",
+            "viewed": "Viewed",
+            "starred": "Starred"
         }
     }
 }
