feat: update Radix UI dropdown menu and translations, enhance sidebar navigation

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -10,7 +10,8 @@
             "favourites": "Starred",
             "teams": "Teams",
             "projects": "Projects",
-            "workflows": "Workflows"
+            "workflows": "Workflows",
+            "recent": "Recent"
         },
         "search": {
             "placeholder": "Search..."
