Created Ticketing models: Attachment, Comment, Issue, IssueLabel, IssueType, Label, Priority, Project, ProjectStatus, ProjectUser, and Status. - Developed TicketingServiceProvider for service registration. - Added migrations for issue types, priorities, projects, statuses, labels, project users, project statuses, issues, issue labels, comments, and attachments. - Seeded initial data for issue types, priorities, and statuses.

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -238,12 +238,16 @@
             "type": "Type",
             "actions": "More actions",
             "lead": "Lead",
-            "caption": "Project List"
+            "caption": "Project List",
+            "empty": "No project found"
         },
         "actions": {
             "archive": "Archive",
             "delete": "Delete",
             "create": "Create Project"
+        },
+        "search": {
+            "placeholder": "Search for a project..."
         }
     },
     "teams": {
